--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "datatables.net": "^1.10.20",
         "datatables.net-dt": "^1.10.20",
         "date-fns": "^2.0.1",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.23",
         "material-design-icons": "^3.0.1",
         "material-design-icons-iconfont": "^4.0.5",
         "moment": "^2.24.0",
