--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~3.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
+        "laravel/passport": "^10.4",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
         "s-ichikawa/laravel-sendgrid-driver": "^2.1",
@@ -57,6 +58,10 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true,
+            "symfony/thanks": true
+        }
     }
 }
