--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ],
     "dependencies": {
         "@mathieustan/vue-datepicker": "^0.2.2",
+        "bootstrap-fileinput": "^5.2.8",
         "datatables": "^1.10.18",
         "datatables.net": "^1.10.20",
         "datatables.net-dt": "^1.10.20",
