--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
         "datatables.net": "^1.10.20",
         "datatables.net-dt": "^1.10.20",
         "date-fns": "^2.0.1",
+        "filepond": "^4.28.2",
+        "filepond-plugin-file-encode": "^2.1.10",
+        "filepond-plugin-file-poster": "^2.5.1",
+        "filepond-plugin-file-validate-size": "^2.2.8",
+        "filepond-plugin-file-validate-type": "^1.2.8",
+        "filepond-plugin-image-preview": "^4.6.11",
         "jspdf": "^2.5.1",
         "jspdf-autotable": "^3.5.23",
         "material-design-icons": "^3.0.1",
@@ -39,10 +45,12 @@
         "vue-barcode": "^1.2.0",
         "vue-datepicker": "^1.3.0",
         "vue-dynamic-select": "^1.0.16",
+        "vue-filepond": "^4.0.0",
         "vue-material": "^1.0.0-beta-11",
         "vue-multiselect": "^2.1.6",
         "vue-select": "^2.4.0",
         "vue-tables-2": "^2.0.18",
+        "vue-template-compiler": "^2.7.14",
         "vue-toasted": "^1.1.27",
         "vuejs-datepicker": "^1.6.2",
         "vuelidate": "^0.7.4"
