--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "material-design-icons": "^3.0.1",
         "material-design-icons-iconfont": "^4.0.5",
         "moment": "^2.24.0",
+        "sweetalert2": "^11.7.12",
         "vue-barcode": "^1.2.0",
         "vue-datepicker": "^1.3.0",
         "vue-dynamic-select": "^1.0.16",
