--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "php": ">=7.0.0",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "fideloper/proxy": "~3.3",
+        "fruitcake/laravel-cors": "^1.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
-        "laravel/passport": "^10.4",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
         "s-ichikawa/laravel-sendgrid-driver": "^2.1",
